<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/character_select"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:targetApi="ice_cream_sandwich">

    <Button
        android:id="@+id/button"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/blueplayer"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_below="@+id/imageView3"
        android:layout_alignRight="@+id/button5"
        android:layout_alignEnd="@+id/button5" />

    <Button
        android:id="@+id/PlayerGreen"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button"
        android:layout_alignBottom="@+id/button"
        android:layout_alignEnd="@+id/imageView4"
        android:layout_alignRight="@+id/imageView4"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/greenPlayer"
        android:textStyle="bold" />

    <Button
        android:id="@+id/PlayerRed"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_below="@+id/imageView5"
        android:layout_marginTop="11dp"
        android:text="@string/redPlayer"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="65dp"
        android:contentDescription=""
        android:src="@drawable/player_blau"
        tools:ignore="ContentDescription"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/player_green"
        android:layout_alignTop="@+id/imageView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="39dp"
        android:layout_marginEnd="39dp"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/player_red"
        android:layout_below="@+id/button"
        android:layout_alignRight="@+id/imageView3"
        android:layout_alignEnd="@+id/imageView3"
        android:layout_marginTop="20dp"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/player_yellow"
        android:layout_alignTop="@+id/imageView5"
        android:layout_alignLeft="@+id/imageView4"
        android:layout_alignStart="@+id/imageView4"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/button4"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/PlayerGreen"
        android:layout_alignRight="@+id/PlayerGreen"
        android:layout_alignTop="@+id/PlayerRed"
        android:text="@string/yellowPlayer"
        android:textAlignment="center"
        android:textStyle="bold" />


    <Button
        android:id="@+id/button5"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView5"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageView5"
        android:layout_marginBottom="13dp"
        android:onClick="onClickGoBackToMenu"
        android:text="@string/back"
        android:textAlignment="center"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button6"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:layout_alignBaseline="@+id/button5"
        android:layout_alignBottom="@+id/button5"
        android:layout_alignLeft="@+id/imageView6"
        android:layout_alignStart="@+id/imageView6" />

</RelativeLayout>