<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2">

    <Button
        android:id="@+id/start_game"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="129dp"
        android:onClick="onClickChangeToCharacterSelect"
        android:text="@string/spielerauswahl"
        android:textColor="#ffffff"
        android:textStyle="bold"
        tools:targetApi="honeycomb" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="109dp"
        android:text="@string/gamename"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="71dp"
        android:text="@string/start_menu"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/instr_button"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="14dp"
        android:layout_toLeftOf="@+id/textView2"
        android:layout_toStartOf="@+id/textView2"
        android:onClick="onButtonClickCreateInstr"
        android:text="@string/instructions"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        tools:ignore="NewApi,RelativeOverlap" />

</RelativeLayout>