<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:orientation="horizontal"
    tools:targetApi="ice_cream_sandwich">

    <TextView
        android:id="@+id/ip_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:fontFamily="casual"
        android:text=""
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/network_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:fontFamily="casual"
        android:text=""
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/start_server"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="309dp"
        android:fontFamily="casual"
        android:onClick="onClickStartServer"
        android:text="@string/start_server"
        android:layout_alignBottom="@+id/connect"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/ip_address_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/connect"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:ems="10"
        android:text="192.168.178.24"
        android:hint="Server ip"
        android:inputType="text" />

    <Button
        android:id="@+id/connect"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="109dp"
        android:fontFamily="casual"
        android:onClick="onClickConnectClientToServer"
        android:text="@string/connect"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textStyle="bold" />
    <Button
        android:id="@+id/button_back"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="49dp"
        android:fontFamily="casual"
        android:onClick="onClickGoBack"
        android:text="@string/zurueck"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textStyle="bold" />

</RelativeLayout>